--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ file(GLOB_RECURSE SOURCES
 source_group(TREE ${CMAKE_CURRENT_LIST_DIR} FILES ${SOURCES})
 
 add_library (XbSymbolDatabase ${SOURCES})
+add_executable (XbSymbolDatabaseTool main.c ${SOURCES})
 
 set_target_properties(XbSymbolDatabase PROPERTIES
  C_STANDARD 11
