Revert "Remove _CRT_SECURE_NO_WARNINGS build option"
This reverts commit 22eefc41852f91d32b6bdf42a46872cd4f980169.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ cmake_minimum_required (VERSION 3.10.2)
 
 project (XbSymbolDatabase)
 
+add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
+
 file(GLOB_RECURSE SOURCES
  "XbSymbolDatabase.c"
  "OOVPADatabase/*.inl"
